--- a/manifests/globe-history.yaml
+++ b/manifests/globe-history.yaml
@@ -5,12 +5,12 @@ metadata:
   name: globe-history
 spec:
   schedule: "22 3,4,5,6,7,8,12,15,19,22 * * *"
+  concurrencyPolicy: Forbid
   jobTemplate:
     spec:
       template:
         spec:
           restartPolicy: OnFailure
-          concurrentlyPolicy: Forbid
           securityContext:
             runAsUser: 0
             runAsGroup: 0
